<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/RegisterPage_RL"
    android:background="@color/registerPageBG"
    tools:context=".Activities.RegisterPage">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/RegisterPage_userProfileIV"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="47dp"
        android:padding="2dp"
        android:src="@drawable/profilepic"
        android:scaleType="centerCrop"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RegisterPage_userNameET"
        android:layout_below="@id/RegisterPage_userProfileIV"
        android:background="@drawable/login_et_bg"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="7dp"
        android:gravity="center|left"
        android:textSize="15sp"
        android:textColor="@color/lightGray"
        android:layout_marginTop="5dp"
        android:hint="@string/user_name"
        android:textColorHint="@color/lightGray"
        android:padding="2dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:maxLength="20"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RegisterPage_userEmailET"
        android:layout_below="@id/RegisterPage_userNameET"
        android:background="@drawable/login_et_bg"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="7dp"
        android:gravity="center|left"
        android:textSize="15sp"
        android:textColor="@color/lightGray"
        android:layout_marginTop="5dp"
        android:hint="@string/email_et_hint"
        android:textColorHint="@color/lightGray"
        android:padding="2dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:maxLength="20"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/RegisterPage_userDOBTV"
        android:hint="@string/enter_dob"
        android:layout_below="@id/RegisterPage_userEmailET"
        android:background="@drawable/login_et_bg"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:gravity="center|left"

        android:text="@string/enter_dob"
        android:textColor="@color/highlightercolor"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RegisterPage_userPasswordET"
        android:layout_below="@id/RegisterPage_userDOBTV"
        android:background="@drawable/login_et_bg"
        android:hint="@string/password_et_hint"
        android:textColorHint="@color/lightGray"
        android:textColor="@color/lightGray"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:textSize="15sp"
        android:gravity="center|left"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:drawablePadding="7dp"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RegisterPage_userConfirmPasswordET"
        android:layout_below="@id/RegisterPage_userPasswordET"
        android:background="@drawable/login_et_bg"
        android:hint="@string/re_enter_password"
        android:textColorHint="@color/lightGray"
        android:textColor="@color/lightGray"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:textSize="15sp"
        android:gravity="center|left"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:drawablePadding="7dp"

        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RegisterPage_RadioGroup"
        android:orientation="horizontal"
        android:layout_marginTop="3dp"
        android:layout_below="@id/RegisterPage_userConfirmPasswordET"
        android:layout_centerInParent="true">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioMale"
            android:checked="true"
            android:text="@string/radio_male"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioFemale"
            android:text="@string/radio_female"
            />

    </RadioGroup>
    <Button
        android:layout_width="168dp"
        android:layout_height="40dp"
        android:id="@+id/RegisterPage_RegisterBtn"
        android:layout_below="@id/RegisterPage_RadioGroup"
        android:layout_centerInParent="true"
        android:background="@drawable/round_btn_bg"
        android:text="@string/move_to_register_btn"
        android:textAllCaps="false"
        android:layout_marginTop="8dp"
        

        />

</RelativeLayout>